--- a/package.json
+++ b/package.json
@@ -31,12 +31,20 @@
     "requireCurlyBraces": true
   },
   "eslintConfig":{
-    "env": { "es6": true },
+    "env": {
+      "es6": true,
+      "browser": true,
+      "jquery": true
+    },
+    "extends": "eslint:recommended",
+    "parser": "babel-eslint",
     "parserOptions": {
       "ecmaVersion": 6,
       "sourceType": "module",
       "ecmaFeatures": {
-        "jsx": true
+        "jsx": true,
+        "modules": true,
+        "experimentalObjectRestSpread": true
       }
     }
   },
